Adição fontes e containers
-Fontes adicionadas
-Criação container mensagem de vitória
-Finalização indicador vez em header

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             </div>
         </div>
         <button class="startBtn"><p class="startBtnText">START</p></button>
+        <div id="player1" class="winnerContainer" >
+            <p class="winnerText">Player_name <br><strong class="winStrong">VENCEU!!!</strong></p>
+        </div>
+        <div class="winnerContainer" id="player2">
+            <p class="winnerText">Player_name <br><strong class="winStrong">VENCEU!!!</strong></p>
+        </div>
     </div>
 </body>
 </html>
