--- a/index.html
+++ b/index.html
@@ -10,27 +10,35 @@
 <body>
     <div class="boardContainerGrid">
         <header>
-            <div class="turnMessage">
+            <div id="p1" class="turnMessage">
                 <p class="turnText">Vez de</p>
                 <strong class="turnPlayerName">Player 1</strong>
             </div>
-            <p class="machResult">EMPATE!!</p>
-            <div class="turnMessage">
+            <p class="machResult display">EMPATE!!</p>
+            <div id="p2" class="turnMessage">
                 <p class="turnText">Vez de</p>
                 <strong class="turnPlayerName">Player 2</strong>
             </div>
         </header>
-        <div class="boardMarginEffect">
-            <div class="board">
-                
-            </div>
+        <div class="board">
+            <div class="imgBoard"><img src="img/O.svg" alt="Simbolo bolinha"></div>
+            <div class="imgBoard"><img src="img/O.svg" alt="Simbolo bolinha"></div>
+            <div class="imgBoard"><img src="img/O.svg" alt="Simbolo bolinha"></div>
+            <div class="imgBoard"><img src="img/O.svg" alt="Simbolo bolinha"></div>
+            <div class="imgBoard"><img src="img/O.svg" alt="Simbolo bolinha"></div>
+            <div class="imgBoard"><img src="img/O.svg" alt="Simbolo bolinha"></div>
+            <div class="imgBoard"><img src="img/O.svg" alt="Simbolo bolinha"></div>
+            <div class="imgBoard"><img src="img/O.svg" alt="Simbolo bolinha"></div>
+            <div class="imgBoard"><img src="img/O.svg" alt="Simbolo bolinha"></div>
+            
+ 
         </div>
         <button class="startBtn"><p class="startBtnText">START</p></button>
         <div id="player1" class="winnerContainer" >
-            <p class="winnerText">Player_name <br><strong class="winStrong">VENCEU!!!</strong></p>
+            <p class="winnerText">Player_name <br><strong class="machResult">VENCEU!!!</strong></p>
         </div>
-        <div class="winnerContainer" id="player2">
-            <p class="winnerText">Player_name <br><strong class="winStrong">VENCEU!!!</strong></p>
+        <div id="player2" class="winnerContainer" >
+            <p class="winnerText">Player_name <br><strong class="machResult">VENCEU!!!</strong></p>
         </div>
     </div>
 </body>
