--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         </div>
         <div id="player2" class="winnerContainer" >
             <p class="winnerText">Player_name <br><strong class="machResult">VENCEU!!!</strong></p>
-        </div>
+        </div>  
     </div>
+    <script type="text/javascript" src="scripts.js"></script>
 </body>
 </html>
