Lógica troca de turnos
-Adicionado Event Listener em cada quadrado do tabuleiro.
- Dependendo de quem for a vez adiciona o simbolo de X ou O.
-Cursor "pointer" on start e "auto" pós clique

--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
             </div>
         </header>
         <div class="board">
-            <div class="imgBoard"><img src="img/O.svg" alt="Simbolo bolinha" id="b1"></div>
-            <div class="imgBoard"><img src="img/O.svg" alt="Simbolo bolinha" id="b2"></div>
-            <div class="imgBoard"><img src="img/O.svg" alt="Simbolo bolinha" id="b3"></div>
-            <div class="imgBoard"><img src="img/O.svg" alt="Simbolo bolinha" id="b4"></div>
-            <div class="imgBoard"><img src="img/O.svg" alt="Simbolo bolinha" id="b5"></div>
-            <div class="imgBoard"><img src="img/O.svg" alt="Simbolo bolinha" id="b6"></div>
-            <div class="imgBoard"><img src="img/O.svg" alt="Simbolo bolinha" id="b7"></div>
-            <div class="imgBoard"><img src="img/O.svg" alt="Simbolo bolinha" id="b8"></div>
-            <div class="imgBoard"><img src="img/O.svg" alt="Simbolo bolinha" id="b9"></div>
+            <div class="imgBoard" id="b1"></div>
+            <div class="imgBoard" id="b2"></div>
+            <div class="imgBoard" id="b3"></div>
+            <div class="imgBoard" id="b4"></div>
+            <div class="imgBoard"></div>
+            <div class="imgBoard"></div>
+            <div class="imgBoard"></div>
+            <div class="imgBoard"></div>
+            <div class="imgBoard"></div>
             
  
         </div>
