--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p class="turnText">Vez de</p>
                 <strong class="turnPlayerName">Player 1</strong>
             </div>
-            <p class="machResult display">EMPATE!!</p>
+            <p class="machResult display" id="tie">EMPATE!!</p>
             <div id="p2" class="turnMessage">
                 <p class="turnText">Vez de</p>
                 <strong class="turnPlayerName">Player 2</strong>
