lógica recomeçar jogo (empate)
Adicionado botão de recomeçar o jogo no empate
Criado botão restart específico para vitórias

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
                 <p class="turnText">Vez de</p>
                 <strong class="turnPlayerName">Player 1</strong>
             </div>
-            <p class="machResult display" id="tie">EMPATE!!</p>
+            <p class="machResult" id="tie">EMPATE!!</p>
             <div id="p2" class="turnMessage">
                 <p class="turnText">Vez de</p>
                 <strong class="turnPlayerName">Player 2</strong>
             </div>
         </header>
         <div class="board">
-            <div class="imgBoard" id="b1"></div>
-            <div class="imgBoard" id="b2"></div>
-            <div class="imgBoard" id="b3"></div>
-            <div class="imgBoard" id="b4"></div>
+            <div class="imgBoard"></div>
+            <div class="imgBoard"></div>
+            <div class="imgBoard"></div>
+            <div class="imgBoard"></div>
             <div class="imgBoard"></div>
             <div class="imgBoard"></div>
             <div class="imgBoard"></div>
@@ -53,9 +53,11 @@
         <button class="startBtn"><p class="startBtnText">START</p></button>
         <div id="player1" class="winnerContainer" >
             <p class="winnerText"><label>Player_name</label><br><strong class="machResult">VENCEU!!!</strong></p>
+            <button class="startBtn restartWin"><p class="startBtnText pt20">RESTART</p></button>
         </div>
         <div id="player2" class="winnerContainer" >
             <p class="winnerText"><label>Player_name</label><br><strong class="machResult">VENCEU!!!</strong></p>
+            <button class="startBtn restartWin"><p class="startBtnText pt20">RESTART</p></button>
         </div>  
     </div>
     <script type="text/javascript" src="scripts.js"></script>
