--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div class="messageContainer"><p class="nameMessage">Digite o nome dos jogadores:</p></div>
         <div class="modalContainer">
             <div class="modalSide" id="p1Side">
-                <label for="player1Name" class="labelForm">Jogador O</label>
+                <label for="player1Name" class="labelForm">JOGADOR <img src="img/O.svg" alt="O" class="modalImg"></label>
                 <input type="text" placeholder="Nome Jogador 1" id="player1Name" class="inputText">
             </div>
             <div class="modalSide" id="p2Side">
-                <label for="player2Name" class="labelForm">Jogador X</label>
+                <label for="player2Name" class="labelForm">JOGADOR <img src="img/X.svg" alt="x" class="modalImg"></label>
                 <input type="text" placeholder="Nome Jogador 2" id="player2Name" class="inputText">
             </div>
         </div>
