Ajustes Validação (CSS3 e HTML5)

--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
             
  
         </div>
-        <button class="startBtn"><p class="startBtnText">START</p></button>
+        <button class="startBtn"><span class="startBtnText">START</span></button>
         <div id="player1" class="winnerContainer" >
             <p class="winnerText"><label>Player_name</label><br><strong class="machResult">VENCEU!!!</strong></p>
-            <button class="startBtn restartWin"><p class="startBtnText pt20">RESTART</p></button>
+            <button class="startBtn restartWin"><span class="startBtnText pt20">RESTART</span></button>
         </div>
         <div id="player2" class="winnerContainer" >
             <p class="winnerText"><label>Player_name</label><br><strong class="machResult">VENCEU!!!</strong></p>
-            <button class="startBtn restartWin"><p class="startBtnText pt20">RESTART</p></button>
+            <button class="startBtn restartWin"><span class="startBtnText pt20">RESTART</span></button>
         </div>  
     </div>
-    <script type="text/javascript" src="scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
